--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -1,4 +1,4 @@
-check_PROGRAMS = writesimpleilbm readsimpleilbm checkilbm
+check_PROGRAMS = writesimpleilbm readsimpleilbm checkilbm interleave-simple
 
 writesimpleilbm_SOURCES = writesimpleilbm.c
 writesimpleilbm_LDADD = ../src/libilbm/libilbm.la $(LIBIFF_LIBS)
@@ -12,4 +12,8 @@ checkilbm_SOURCES = checkilbm.c
 checkilbm_LDADD = ../src/libilbm/libilbm.la $(LIBIFF_LIBS)
 checkilbm_CFLAGS = -I../src/libilbm $(LIBIFF_CFLAGS)
 
-TESTS = writesimpleilbm readsimpleilbm check-missing-BMHD.sh
+interleave_simple_SOURCES = interleave-simple.c
+interleave_simple_LDADD = ../src/libilbm/libilbm.la $(LIBIFF_LIBS)
+interleave_simple_CFLAGS = -I../src/libilbm $(LIBIFF_CFLAGS)
+
+TESTS = writesimpleilbm readsimpleilbm check-missing-BMHD.sh interleave-simple
