Added support for PBM forms, a.k.a. Deluxe Paint PC images

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -1,4 +1,4 @@
-check_PROGRAMS = writesimpleilbm readsimpleilbm checkilbm interleave-simple byterun-simple
+check_PROGRAMS = writesimpleilbm readsimpleilbm checkilbm writesimplepbm readsimplepbm interleave-simple byterun-simple
 
 writesimpleilbm_SOURCES = writesimpleilbm.c
 writesimpleilbm_LDADD = ../src/libilbm/libilbm.la $(LIBIFF_LIBS)
@@ -12,6 +12,14 @@ checkilbm_SOURCES = checkilbm.c
 checkilbm_LDADD = ../src/libilbm/libilbm.la $(LIBIFF_LIBS)
 checkilbm_CFLAGS = -I../src/libilbm $(LIBIFF_CFLAGS)
 
+writesimplepbm_SOURCES = writesimplepbm.c
+writesimplepbm_LDADD = ../src/libilbm/libilbm.la $(LIBIFF_LIBS)
+writesimplepbm_CFLAGS = -I../src/libilbm $(LIBIFF_CFLAGS)
+
+readsimplepbm_SOURCES = readsimplepbm.c
+readsimplepbm_LDADD = ../src/libilbm/libilbm.la $(LIBIFF_LIBS)
+readsimplepbm_CFLAGS = -I../src/libilbm $(LIBIFF_CFLAGS)
+
 interleave_simple_SOURCES = interleave-simple.c
 interleave_simple_LDADD = ../src/libilbm/libilbm.la $(LIBIFF_LIBS)
 interleave_simple_CFLAGS = -I../src/libilbm $(LIBIFF_CFLAGS)
@@ -20,4 +28,4 @@ byterun_simple_SOURCES = byterun-simple.c
 byterun_simple_LDADD = ../src/libilbm/libilbm.la $(LIBIFF_LIBS)
 byterun_simple_CFLAGS = -I../src/libilbm $(LIBIFF_CFLAGS)
 
-TESTS = writesimpleilbm readsimpleilbm check-missing-BMHD.sh interleave-simple byterun-simple
+TESTS = writesimpleilbm readsimpleilbm check-missing-BMHD.sh writesimplepbm readsimplepbm interleave-simple byterun-simple
