Add preliminary support for ACBM files

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -1,6 +1,6 @@
-check_PROGRAMS = writesimpleilbm writesimpleilbm-padded readsimpleilbm checkilbm writesimplepbm readsimplepbm interleave byterun
+check_PROGRAMS = writesimpleilbm writesimpleilbm-padded readsimpleilbm checkilbm writesimplepbm readsimplepbm writesimpleacbm readsimpleacbm interleave byterun
 
-noinst_HEADERS = simpleilbmdata.h simplepbmdata.h
+noinst_HEADERS = simpleilbmdata.h simplepbmdata.h simpleacbmdata.h
 
 writesimpleilbm_SOURCES = simpleilbmdata.c writesimpleilbm.c
 writesimpleilbm_LDADD = ../src/libilbm/libilbm.la $(LIBIFF_LIBS)
@@ -26,6 +26,14 @@ readsimplepbm_SOURCES = simplepbmdata.c readsimplepbm.c
 readsimplepbm_LDADD = ../src/libilbm/libilbm.la $(LIBIFF_LIBS)
 readsimplepbm_CFLAGS = -I../src/libilbm $(LIBIFF_CFLAGS)
 
+writesimpleacbm_SOURCES = simpleacbmdata.c writesimpleacbm.c
+writesimpleacbm_LDADD = ../src/libilbm/libilbm.la $(LIBIFF_LIBS)
+writesimpleacbm_CFLAGS = -I../src/libilbm $(LIBIFF_CFLAGS)
+
+readsimpleacbm_SOURCES = simpleacbmdata.c readsimpleacbm.c
+readsimpleacbm_LDADD = ../src/libilbm/libilbm.la $(LIBIFF_LIBS)
+readsimpleacbm_CFLAGS = -I../src/libilbm $(LIBIFF_CFLAGS)
+
 interleave_SOURCES = interleave.c
 interleave_LDADD = ../src/libilbm/libilbm.la $(LIBIFF_LIBS)
 interleave_CFLAGS = -I../src/libilbm $(LIBIFF_CFLAGS)
@@ -34,6 +42,6 @@ byterun_SOURCES = byterun.c
 byterun_LDADD = ../src/libilbm/libilbm.la $(LIBIFF_LIBS)
 byterun_CFLAGS = -I../src/libilbm $(LIBIFF_CFLAGS)
 
-TESTS = writesimpleilbm writesimpleilbm-padded readsimpleilbm check-missing-BMHD.sh writesimplepbm readsimplepbm interleave-simple.sh interleave-simple-padded.sh byterun-simple.sh byterun-simple-padded.sh
+TESTS = writesimpleilbm writesimpleilbm-padded readsimpleilbm check-missing-BMHD.sh writesimplepbm readsimplepbm writesimpleacbm readsimpleacbm interleave-simple.sh interleave-simple-padded.sh byterun-simple.sh byterun-simple-padded.sh
 
 EXTRA_DIST = check-missing-BMHD.sh missing-BMHD.ILBM interleave-simple.sh interleave-simple-padded.sh byterun-simple.sh byterun-simple-padded.sh
