--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,4 +1,4 @@
-SUBDIRS = libilbm ilbmpack ilbmpp
+SUBDIRS = libilbm ilbmpack ilbmpp ilbm2acbm
 
 pkgconfigdir = $(libdir)/pkgconfig
 pkgconfig_DATA = libilbm.pc
