--- a/doc/man/Makefile.am
+++ b/doc/man/Makefile.am
@@ -1,3 +1,3 @@
-man1_MANS = ilbmpack.1 ilbmpp.1
+man1_MANS = ilbmpack.1 ilbmpp.1 acbm2ilbm.1 ilbm2acbm.1
 
-EXTRA_DIST = ilbmpack.1 ilbmpp.1
+EXTRA_DIST = ilbmpack.1 ilbmpp.1 acbm2ilbm.1 ilbm2acbm.1
