--- a/doc/Makefile.am
+++ b/doc/Makefile.am
@@ -1,1 +1,3 @@
-SUBDIRS = man
+doc_DATA = ACBM.asc ILBM-additions.asc ILBM.asc ILBM.DRNG-additions.asc ILBM.DRNG.asc PBM.asc
+
+EXTRA_DIST = ACBM.asc ILBM-additions.asc ILBM.asc ILBM.DRNG-additions.asc ILBM.DRNG.asc PBM.asc
