--- a/src/ilbmpack/Makefile.am
+++ b/src/ilbmpack/Makefile.am
@@ -1,3 +1,6 @@
+ilbmpack.1:
+	$(HELP2MAN) --output=$@ --no-info --name 'Compress or decompress ILBM images inside an IFF file' --libtool ./ilbmpack
+
 AM_CPPFLAGS = -DHAVE_GETOPT_H=$(HAVE_GETOPT_H)
 
 bin_PROGRAMS = ilbmpack
@@ -6,3 +9,6 @@ noinst_HEADERS = pack.h
 ilbmpack_SOURCES = main.c pack.c
 ilbmpack_LDADD = ../libilbm/libilbm.la
 ilbmpack_CFLAGS = -I../libilbm $(LIBIFF_CFLAGS)
+
+man1_MANS = ilbmpack.1
+EXTRA_DIST = ilbmpack.1
