--- a/src/ilbmpp/Makefile.am
+++ b/src/ilbmpp/Makefile.am
@@ -1,3 +1,6 @@
+ilbmpp.1:
+	$(HELP2MAN) --output=$@ --no-info --name ' Displays a textual representation of an IFF/ILBM file on the standard output' --libtool ./ilbmpp
+
 AM_CPPFLAGS = -DHAVE_GETOPT_H=$(HAVE_GETOPT_H)
 
 bin_PROGRAMS = ilbmpp
@@ -6,3 +9,6 @@ noinst_HEADERS = pp.h
 ilbmpp_SOURCES = main.c pp.c
 ilbmpp_LDADD = ../libilbm/libilbm.la
 ilbmpp_CFLAGS = -I../libilbm $(LIBIFF_CFLAGS)
+
+man1_MANS = ilbmpp.1
+EXTRA_DIST = ilbmpp.1
