--- a/src/acbm2ilbm/Makefile.am
+++ b/src/acbm2ilbm/Makefile.am
@@ -1,3 +1,6 @@
+acbm2ilbm.1:
+	$(HELP2MAN) --output=$@ --no-info --name 'Convert all ACBM images inside an IFF file to ILBM images' --libtool ./acbm2ilbm
+
 AM_CPPFLAGS = -DHAVE_GETOPT_H=$(HAVE_GETOPT_H)
 
 bin_PROGRAMS = acbm2ilbm
@@ -6,3 +9,6 @@ noinst_HEADERS = acbm2ilbm.h
 acbm2ilbm_SOURCES = main.c acbm2ilbm.c
 acbm2ilbm_LDADD = ../libilbm/libilbm.la
 acbm2ilbm_CFLAGS = -I../libilbm $(LIBIFF_CFLAGS)
+
+man1_MANS = acbm2ilbm.1
+EXTRA_DIST = acbm2ilbm.1
