--- a/src/libilbm/libilbm.vcxproj
+++ b/src/libilbm/libilbm.vcxproj
@@ -83,6 +83,7 @@
     <ClCompile Include="bitmapheader.c" />
     <ClCompile Include="byterun.c" />
     <ClCompile Include="cmykmap.c" />
+    <ClCompile Include="colornames.c" />
     <ClCompile Include="colormap.c" />
     <ClCompile Include="colorrange.c" />
     <ClCompile Include="cycleinfo.c" />
@@ -98,6 +99,7 @@
   <ItemGroup>
     <ClInclude Include="bitmapheader.h" />
     <ClInclude Include="byterun.h" />
+    <ClInclude Include="colornames.h" />
     <ClInclude Include="cmykmap.h" />
     <ClInclude Include="colormap.h" />
     <ClInclude Include="colorrange.h" />
