Make parts of the ILBM reusable by the ANIM extension

--- a/src/libilbm/Makefile.am
+++ b/src/libilbm/Makefile.am
@@ -1,5 +1,5 @@
 lib_LTLIBRARIES = libilbm.la
-pkginclude_HEADERS = bitmapheader.h colormap.h colorrange.h cycleinfo.h destmerge.h dpiheader.h grab.h sprite.h viewport.h byterun.h ilbm.h interleave.h ilbmimage.h drange.h cmykmap.h colornames.h
+pkginclude_HEADERS = bitmapheader.h colormap.h colorrange.h cycleinfo.h destmerge.h dpiheader.h grab.h sprite.h viewport.h byterun.h ilbm.h interleave.h ilbmimage.h ilbmchunkheaders.h ilbmextensions.h ilbmformextensions.h drange.h cmykmap.h colornames.h
 
 libilbm_la_SOURCES = bitmapheader.c colormap.c colorrange.c cycleinfo.c destmerge.c dpiheader.c grab.c sprite.c viewport.c byterun.c ilbm.c interleave.c ilbmimage.c drange.c cmykmap.c colornames.c
 libilbm_la_CFLAGS = $(LIBIFF_CFLAGS)
